5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1636_651.log
== TEST (2019-04-13 00:01:37) 
-- CODE:
altura = input(" Digite a altura ")
sexo = " M/F? "
if(sexo==M):
	mensagem = "(72.7 * altura)-58"
else:
	mensagem = "(62.1 * altura)-44.7"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(sexo==M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:02:00) 
-- CODE:
altura = input(" Digite a altura ")
sexo = input(" M/F? ")
if(sexo==M):
	mensagem = "(72.7 * altura)-58"
else:
	mensagem = "(62.1 * altura)-44.7"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(sexo==M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:02:22) 
-- CODE:
altura = input(" Digite a altura ")
sexo = input(" M/F? ")
if(sexo=M):
	mensagem = "(72.7 * altura)-58"
else:
	mensagem = "(62.1 * altura)-44.7"
	print(mensagem)
-- ERROR:
File "XXXX", line 3
    if(sexo=M):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:02:32) 
-- CODE:
altura = input(" Digite a altura ")
sexo = input(" M/F? ")
if(sexo== "M"):
	mensagem = "(72.7 * altura)-58"
else:
	mensagem = "(62.1 * altura)-44.7"
	print(mensagem)
-- OUTPUT:
(62.1 * altura)-44.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:02:55) 
-- CODE:
altura = input(" Digite a altura ")
sexo = input(" M/F? ")
if(sexo== "M"):
	mensagem = (72.7 * altura)-58
else:
	mensagem = (62.1 * altura)-44.7
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = (62.1 * altura)-44.7
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:03:15) 
-- CODE:
altura = input(" Digite a altura ")
sexo = input(" M/F? ")
if(sexo== "M"):
	mensagem = ((72.7 * altura)-58)
else:
	mensagem = ((62.1 * altura)-44.7)
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = ((62.1 * altura)-44.7)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:03:56) 
-- CODE:
altura = float(input(" Digite a altura "))
sexo = input(" M/F? ")
if(sexo== "M"):
	mensagem = ((72.7 * altura)-58)
else:
	mensagem = ((62.1 * altura)-44.7)
	print(mensagem)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:13:40) 
-- CODE:
altura = float(input(" Digite a altura "))
sexo = input(" M/F? ")
if(sexo== "M"):
	mensagem = ((72.7 * altura)-58)
else:
	mensagem = ((62.1 * altura)-44.7)
	print(mensagem)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:16:58) 
-- CODE:
altura = float(input(" Digite a altura "))
sexo = input(" M/F? ")
if(sexo== "M"):
	print(round(mensagem = ((72.7 * altura)-58),2))
else:
	print(round(mensagem = ((62.1 * altura)-44.7),2))
	
-- ERROR:
File "XXXX", line 4
    print(round(mensagem = ((72.7 * altura)-58),2))
                                               ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:17:18) 
-- CODE:
altura = float(input(" Digite a altura "))
sexo = input(" M/F? ")
if(sexo== "M"):
	print(round(mensagem = (72.7 * altura)-58,2))
else:
	print(round(mensagem = ((62.1 * altura)-44.7),2))
	
-- ERROR:
File "XXXX", line 4
    print(round(mensagem = (72.7 * altura)-58,2))
                                             ^
SyntaxError: positional argument follows keyword argument
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:19:13) 
-- CODE:
altura = float(input(" Digite a altura "))
sexo = input(" M/F? ")
if(sexo== "M"):
	mensagem = ((72.7) * altura)- 58
	print(round(mensagem,2))
	
else:
	mensagem = ((62.1) * altura)- 44.7
	print(round(mensagem,2))
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:19:25) 
-- CODE:
altura = float(input(" Digite a altura "))
sexo = input(" M/F? ")
if(sexo== "M"):
	mensagem = ((72.7) * altura)- 58
	print(round(mensagem,2))
	
else:
	mensagem = ((62.1) * altura)- 44.7
	print(round(mensagem,2))
	
-- EXECUTION TIME:
0.137067
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
